--- a/package.json
+++ b/package.json
@@ -73,13 +73,16 @@
     "@pika/types": "^0.6.0",
     "babel-jest": "^24.8.0",
     "coveralls": "^2.13.1",
+    "html-webpack-plugin": "^5.3.1",
     "jest": "^24.8.0",
     "lint-staged": "^7.2.0",
     "np": "^5.0.3",
     "pika-plugin-build-web-babel": "^0.8.0",
     "pika-plugin-clean-dist-src": "^0.1.1",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.11.1"
+    "prettier": "^1.11.1",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
   },
   "lint-staged": {
     "*.{tsx,js,jsx,ts}": [
@@ -89,5 +92,8 @@
   },
   "pre-commit": [
     "lint-staged"
-  ]
+  ],
+  "dependencies": {
+    "vue": "^2.6.12"
+  }
 }
